css/main.css
body {
  background-color:#000;
}

h1 {
  font-family: Neuton, serif;
  color: #8c8c8c;
}

.song {
  font-family: Neuton, serif;
  color: #Ebb746;
  margin: 0;
  /* position: relative; */
}

.p1 {
  position: absolute;
}

.p2 {
  position: absolute;
}

.p3 {
  position: absolute;
}

.chorus {
  font-family: Montserrat, sans-serif;
  color: #d4201c;
}

p {
  margin: 0;
}

@media only screen and (min-width: 25em) {

  .chorus {
    text-align: center;
  }

  .p1 {
    left: 50%;
    transform: translateX(-50%);
    top: 26%;
    width: 100%;
  }

  .p2 {
    left: 50%;
    transform: translateX(-50%);
    top: 54%;
    width: 100%;
  }

  .p3 {
    left: 50%;
    transform: translateX(-50%);
    top: 83%;
    width: 100%;
  }



}

@media only screen and (min-width: 60em) {

  .p1 {
    left: 50%;
    transform: translateX(-50%);
    top: 13%;
    background-color: #000;
    width: 100%;
  }

  .p2 {
    left: 50%;
    transform: translateX(-50%);
    top: 43%;
    background-color: #000;
    width: 100%;
  }

  .p3 {
    left: 50%;
    transform: translateX(-50%);
    top: 73%;
    background-color: #000;
    width: 100%;
  }

}

